# ai-sales-assistant

./: .env.example  .env.local  .flake8  .gitignore  AVITO_INTEGRATION_REPORT.md  AVITO_WEBHOOK_SETUP.md  Dockerfile  Dockerfile copy  PROJECT_STATUS.md  README.md  T019_REDIS_CONTEXT_PROMPT.md  T023_PRICING_CALCULATOR_PROMPT.md  T023_VERIFICATION_REPORT.md  alembic.ini  docker-compose.yml  generate_test_token.py  progress.md  pyproject.toml  pytest.ini  requirements.txt  test_avito.py  test_avito_live.py
.github/workflows/: ci.yml  deploy.yml
.specify/tasks/: 001-ai-sales-assistant.md
Prompt_TASK/: T029.md
app/: __init__.py  main.py  main.py.backup
app/api/: __init__.py
app/api/routes/: __init__.py  amocrm.py  avito.py  chat.py  health.py  telegram.py
app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  logging.py  observability.py  pricing_rules.py  rate_limiter.py  redis_client.py  security.py  settings.py
app/integrations/: __init__.py
app/integrations/amocrm/: __init__.py  auth.py  client.py  models.py
app/models/: avito.py  conversation.py  crm.py  security.py
app/services/: __init__.py
app/services/avito/: __init__.py  auth.py  client.py  conversation_manager.py  data_extractors.py  exceptions.py  handlers.py  lead_service.py  lead_summarizer.py  prompt_loader.py  sync.py  webhook.py
app/services/avito/prompts/: conversation.poml  extraction.poml  summarization.poml
app/services/crm/: __init__.py  amocrm_service.py  lead_qualifier.py
app/services/documents/: __init__.py  generator.py  templates.py
app/services/pdf/: README.md  __init__.py  generator.py
app/services/pdf_disabled/: generator.py
app/services/pricing/: __init__.py  calculator.py
app/services/rag/: __init__.py  answer.py  embeddings.py  loader.py  loader.py.backup  search.py
app/services/telegram/: __init__.py  bot.py  handlers.py  lead_service.py
app/services/web/: __init__.py  chat_session.py
app/utils/: text_formatters.py
data/documents/: .gitkeep
deploy/: hetzner-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_documents_table.py
nginx/: nginx.conf
redis/: redis.conf
scripts/: clear_avito_conversations.py  clear_conversations.py  clear_conversations.sh  generate_service_tokens.py
specs/001-ai-sales-assistant/: plan.md  spec.md
static/: chat-widget.html
tests/: README.md  conftest.py  test_main.py
tests/integration/: test_amocrm.py  test_avito_auth.py  test_avito_conversation.py  test_avito_handlers.py  test_avito_sync.py  test_avito_webhook.py  test_documents_generation.py  test_pdf_generation.py  test_rag_system.py  test_secrets_health.py  test_telegram_context.py  test_telegram_handlers.py
