[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
exclude = "/(\\.git|\\.venv|build|dist|migrations/versions)/"

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["migrations/versions/*"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
plugins = []

# Исключаем файлы, которые не попадают в GitHub (согласно .gitignore)
# и другие файлы, которые не должны проверяться mypy
exclude = [
    # Миграции базы данных
    "migrations/versions/",
    
    # Виртуальные окружения
    "venv/",
    ".venv/",
    "env/",
    
    # Кэш Python
    ".*/__pycache__/",
    
    # Сборка и артефакты
    "build/",
    "dist/",
    ".*\\.egg-info/",
    
    # Тесты и покрытие
    ".pytest_cache/",
    ".coverage",
    
    # IDE и редакторы
    ".idea/",
    ".vscode/",
    ".cursor/",
    
    # Логи и временные файлы
    "logs/",
    ".*\\.log",
    ".*\\.tmp",
    
    # Docker и системные файлы
    ".*\\.pid",
    ".DS_Store",
    "Thumbs.db",
    
    # Backup файлы
    ".*\\.backup",
    ".env.backup",
    
    # Документы и знания (если не нужны для типизации)
    "documents/",
    
    # Статические файлы
    "static/",
    
    # Nginx конфигурация
    "nginx/",
    
    # Deploy конфигурация
    "deploy/",
    
    # Спецификации
    "specs/",
    
    # Markdown файлы (если есть Python код внутри)
    ".*\\.md",
    
    # Конфигурационные файлы
    "alembic.ini",
    "pytest.ini",
    "docker-compose.yml",
    "Dockerfile",
    "requirements.txt",
    "README.md",
    "PROJECT_STATUS.md",
    "AVITO_*.md",
    "T*.md",
    "WEBHOOK_*.md"
]

# Дополнительные настройки для строгой типизации
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,E501,W503"
exclude = ".git,__pycache__,.venv,migrations/versions"
